--- a/.github/workflows/install_lint_test.yml
+++ b/.github/workflows/install_lint_test.yml
@@ -26,5 +26,6 @@ jobs:
         flake8 mappa/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        mkdir artifacts
         pip install pytest
         pytest tests -v
